--- a/src/app/common/loading-overlay/loading-overlay.component.html
+++ b/src/app/common/loading-overlay/loading-overlay.component.html
@@ -1,8 +1,9 @@
 <div *ngIf="isLoading" class="overlay">
-	<notification *ngIf="isError"
-					 [notificationType]="'danger'"
-					 [message]="errorMessage"
-					 [showActions]="true"
+	<notification
+		*ngIf="isError"
+		[notificationType]="'danger'"
+		[message]="errorMessage"
+		[showActions]="true"
 	>
 		<ng-template #notificationActions>
 			<button class="btn btn-primary" (click)="handleRetry()">
@@ -11,8 +12,6 @@
 		</ng-template>
 	</notification>
 	<div class="overlay-spinner" *ngIf="!isError">
-		<loading-spinner
-			[message]="message">
-		</loading-spinner>
+		<loading-spinner [message]="message"> </loading-spinner>
 	</div>
 </div>
