--- a/src/app/common/multi-select-input/multi-select-input.component.html
+++ b/src/app/common/multi-select-input/multi-select-input.component.html
@@ -9,5 +9,6 @@
 	(search)="onSearch($event)"
 	(focus)="onTouched()"
 	placeholder="{{ placeholder }}"
-	[(ngModel)]="value">
+	[(ngModel)]="value"
+>
 </ng-select>
