--- a/src/app/core/signup/signed-up.component.html
+++ b/src/app/core/signup/signed-up.component.html
@@ -1,13 +1,13 @@
 <section>
-
 	<div class="row pt-3">
 		<h2 class="col-md-12 text-center">Thanks for requesting an account!</h2>
 		<p class="col-md-4 offset-4 text-center">
-			Your request was successful. If no other approvals are necessary, your account should be active.
+			Your request was successful. If no other approvals are necessary, your account should be
+			active.
 		</p>
 		<p class="col-md-4 offset-4 text-center">
-			You can hang tight for a bit, or <a [routerLink]="['/']">go back home</a> to see if your account is ready...
+			You can hang tight for a bit, or <a [routerLink]="['/']">go back home</a> to see if your
+			account is ready...
 		</p>
 	</div>
-
 </section>
