--- a/src/app/core/teams/view-team/view-team.component.html
+++ b/src/app/core/teams/view-team/view-team.component.html
@@ -9,130 +9,183 @@
 </div>
 
 <ng-container *ngIf="team; else noTeam">
-<div class="d-flex mb-3">
-	<h1>{{ team.name }} (Date Created: {{ team.created | utcDate:'MM/DD/YYYY' }})</h1>
+	<div class="d-flex mb-3">
+		<h1>{{ team.name }} (Date Created: {{ team.created | utcDate: 'MM/DD/YYYY' }})</h1>
 
-	<button type="button" class="btn btn-link ml-auto" (click)="remove()" *ngIf="canManageTeam">
-		Delete Team
-	</button>
-</div>
-
-<div class="cards row">
-	<div class="col col-na-xl-7 col-12">
-		<div class="card">
-			<div class="card-header d-flex align-items-center">
-				<h2>Members</h2>
-			</div>
-			<div class="card-body">
-				<list-team-members [team]="team"></list-team-members>
-			</div>
-		</div>
+		<button type="button" class="btn btn-link ml-auto" (click)="remove()" *ngIf="canManageTeam">
+			Delete Team
+		</button>
 	</div>
 
-	<div class="col col-na-xl-5 col-12">
-		<div class="card">
-			<div class="card-header d-flex align-items-center">
-				<h2>Settings</h2>
-				<button class="btn btn-outline-secondary ml-3" type="button" [disabled]="isEditing"
-						*ngIf="canManageTeam" (click)="edit()">
-					<span class="fa fa-lg fa-pencil"></span>
-				</button>
-				<div class="inline-edit-header-btns ml-auto" *ngIf="isEditing">
-					<button class="btn btn-outline-secondary" type="button" (click)="cancelEdit()">Cancel</button>
-					<button class="btn btn-primary ml-2" type="button" [disabled]="!editTeamForm.form.valid"
-							(click)="saveEdit()">Save</button>
+	<div class="cards row">
+		<div class="col col-na-xl-7 col-12">
+			<div class="card">
+				<div class="card-header d-flex align-items-center">
+					<h2>Members</h2>
+				</div>
+				<div class="card-body">
+					<list-team-members [team]="team"></list-team-members>
 				</div>
 			</div>
-			<div class="card-body" [class.editing]="isEditing">
-				<form id="edit-team-form" #editTeamForm="ngForm">
-					<h3>Basic Information</h3>
-					<div class="form-inline-edit mb-3">
-						<div class="form-group">
-							<label class="col col-form-label">Name</label>
-							<div class="col col-form-readonly-value" *ngIf="!isEditing">
-								<div>{{ team.name | titlecase }}</div>
-							</div>
-							<div class="col" *ngIf="isEditing">
-								<input class="form-control" placeholder="Enter name" name="name"
-									   [(ngModel)]="_team.name" required/>
-							</div>
-						</div>
+		</div>
 
-						<div class="form-group">
-							<label class="col col-form-label">Description</label>
-							<div class="col col-form-readonly-value" *ngIf="!isEditing">
-								<div>{{ team.description | titlecase }}</div>
+		<div class="col col-na-xl-5 col-12">
+			<div class="card">
+				<div class="card-header d-flex align-items-center">
+					<h2>Settings</h2>
+					<button
+						class="btn btn-outline-secondary ml-3"
+						type="button"
+						[disabled]="isEditing"
+						*ngIf="canManageTeam"
+						(click)="edit()"
+					>
+						<span class="fa fa-lg fa-pencil"></span>
+					</button>
+					<div class="inline-edit-header-btns ml-auto" *ngIf="isEditing">
+						<button
+							class="btn btn-outline-secondary"
+							type="button"
+							(click)="cancelEdit()"
+						>
+							Cancel
+						</button>
+						<button
+							class="btn btn-primary ml-2"
+							type="button"
+							[disabled]="!editTeamForm.form.valid"
+							(click)="saveEdit()"
+						>
+							Save
+						</button>
+					</div>
+				</div>
+				<div class="card-body" [class.editing]="isEditing">
+					<form id="edit-team-form" #editTeamForm="ngForm">
+						<h3>Basic Information</h3>
+						<div class="form-inline-edit mb-3">
+							<div class="form-group">
+								<label class="col col-form-label">Name</label>
+								<div class="col col-form-readonly-value" *ngIf="!isEditing">
+									<div>{{ team.name | titlecase }}</div>
+								</div>
+								<div class="col" *ngIf="isEditing">
+									<input
+										class="form-control"
+										placeholder="Enter name"
+										name="name"
+										[(ngModel)]="_team.name"
+										required
+									/>
+								</div>
 							</div>
-							<div class="col" *ngIf="isEditing">
-								<textarea class="form-control" placeholder="Enter description" name="description"
-										  [(ngModel)]="_team.description">
-								</textarea>
-							</div>
-						</div>
 
-						<div class="form-group" *ngIf="team.parent">
-							<label class="col col-form-label">Parent</label>
-							<div class="col col-form-readonly-value">
-								<div>
-									<a class="text-decoration-underline" [routerLink]="['/team', team.parent._id || team.parent]">
-										{{ team.parent.name }}
-									</a>
+							<div class="form-group">
+								<label class="col col-form-label">Description</label>
+								<div class="col col-form-readonly-value" *ngIf="!isEditing">
+									<div>{{ team.description | titlecase }}</div>
+								</div>
+								<div class="col" *ngIf="isEditing">
+									<textarea
+										class="form-control"
+										placeholder="Enter description"
+										name="description"
+										[(ngModel)]="_team.description"
+									>
+									</textarea>
+								</div>
+							</div>
+
+							<div class="form-group" *ngIf="team.parent">
+								<label class="col col-form-label">Parent</label>
+								<div class="col col-form-readonly-value">
+									<div>
+										<a
+											class="text-decoration-underline"
+											[routerLink]="['/team', team.parent._id || team.parent]"
+										>
+											{{ team.parent.name }}
+										</a>
+									</div>
+								</div>
+							</div>
+
+							<div
+								class="form-group"
+								*ngIf="
+									team.implicitMembers &&
+									implicitMembersStrategy === 'roles' &&
+									(team.requiresExternalRoles?.length > 0 || isEditing)
+								"
+							>
+								<label class="col col-form-label">External Roles</label>
+								<div class="col col-form-readonly-value" *ngIf="!isEditing">
+									<div>{{ team.requiresExternalRoles | join: ', ' }}</div>
+								</div>
+								<div class="col" *ngIf="isEditing">
+									<asy-multi-select-input
+										placeholder="Start typing a role..."
+										name="externalRoles"
+										[(ngModel)]="_team.requiresExternalRoles"
+									></asy-multi-select-input>
+								</div>
+							</div>
+
+							<div
+								class="form-group"
+								*ngIf="
+									team.implicitMembers &&
+									implicitMembersStrategy === 'teams' &&
+									(team.requiresExternalTeams?.length > 0 || isEditing)
+								"
+							>
+								<label class="col col-form-label">External Teams</label>
+								<div class="col col-form-readonly-value" *ngIf="!isEditing">
+									<div>{{ team.requiresExternalTeams | join: ', ' }}</div>
+								</div>
+								<div class="col" *ngIf="isEditing">
+									<asy-multi-select-input
+										placeholder="Start typing a team..."
+										name="externalTeams"
+										[(ngModel)]="_team.requiresExternalTeams"
+									></asy-multi-select-input>
 								</div>
 							</div>
 						</div>
+					</form>
 
-						<div class="form-group"
-							 *ngIf="team.implicitMembers && implicitMembersStrategy === 'roles'
-								&& (team.requiresExternalRoles?.length > 0 || isEditing)">
-							<label class="col col-form-label">External Roles</label>
-							<div class="col col-form-readonly-value" *ngIf="!isEditing">
-								<div>{{ team.requiresExternalRoles | join: ', ' }}</div>
-							</div>
-							<div class="col" *ngIf="isEditing">
-								<asy-multi-select-input
-									placeholder="Start typing a role..."
-									name="externalRoles"
-									[(ngModel)]="_team.requiresExternalRoles"></asy-multi-select-input>
-							</div>
-						</div>
-
-						<div class="form-group"
-							 *ngIf="team.implicitMembers && implicitMembersStrategy === 'teams'
-								&& (team.requiresExternalTeams?.length > 0 || isEditing)">
-							<label class="col col-form-label">External Teams</label>
-							<div class="col col-form-readonly-value" *ngIf="!isEditing">
-								<div>{{ team.requiresExternalTeams | join: ', ' }}</div>
-							</div>
-							<div class="col" *ngIf="isEditing">
-								<asy-multi-select-input
-									placeholder="Start typing a team..."
-									name="externalTeams"
-									[(ngModel)]="_team.requiresExternalTeams"></asy-multi-select-input>
-							</div>
-						</div>
+					<div class="inline-edit-btns text-right" *ngIf="isEditing">
+						<button
+							class="btn btn-outline-secondary"
+							type="button"
+							(click)="cancelEdit()"
+						>
+							Cancel
+						</button>
+						<button
+							class="btn btn-primary ml-2"
+							type="button"
+							[disabled]="!editTeamForm.form.valid"
+							(click)="saveEdit()"
+						>
+							Save
+						</button>
 					</div>
-				</form>
+				</div>
+			</div>
+		</div>
 
-				<div class="inline-edit-btns text-right" *ngIf="isEditing">
-					<button class="btn btn-outline-secondary"type="button" (click)="cancelEdit()">Cancel</button>
-					<button class="btn btn-primary ml-2" type="button" [disabled]="!editTeamForm.form.valid"
-							(click)="saveEdit()">Save</button>
+		<div class="col col-na-xl-7 col-12" *ngIf="nestedTeamsEnabled">
+			<div class="card">
+				<div class="card-header d-flex align-items-center">
+					<h2>Sub-Teams</h2>
+				</div>
+				<div class="card-body">
+					<app-list-teams [parent]="team" [embedded]="true"></app-list-teams>
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<div class="col col-na-xl-7 col-12" *ngIf="nestedTeamsEnabled">
-		<div class="card">
-			<div class="card-header d-flex align-items-center">
-				<h2>Sub-Teams</h2>
-			</div>
-			<div class="card-body">
-				<app-list-teams [parent]="team" [embedded]="true"></app-list-teams>
-			</div>
-		</div>
-	</div>
-</div>
 </ng-container>
 
 <ng-template #noTeam>
