--- a/src/app/core/audit/audit-view-details-modal/audit-view-details-modal.component.html
+++ b/src/app/core/audit/audit-view-details-modal/audit-view-details-modal.component.html
@@ -1,15 +1,21 @@
 <div class="modal-header">
 	<h3>
-		<span style="text-transform: capitalize">{{ auditEntry?.audit?.auditType }} {{ auditEntry?.audit?.action + 'd' }}</span><span> by {{ auditEntry?.audit?.actor?.username }} on {{ auditEntry?.created | utcDate }}</span>
+		<span style="text-transform: capitalize"
+			>{{ auditEntry?.audit?.auditType }} {{ auditEntry?.audit?.action + 'd' }}</span
+		><span>
+			by {{ auditEntry?.audit?.actor?.username }} on {{ auditEntry?.created | utcDate }}</span
+		>
 		<span class="pull-right">
-				<a class="btn-icon no-href"
-				   (click)="modalRef.hide()"
-				   tooltip="Close"
-				   placement="bottom"
-				   container="body">
-					<span class="fa fa-times"></span>
-				</a>
-			</span>
+			<a
+				class="btn-icon no-href"
+				(click)="modalRef.hide()"
+				tooltip="Close"
+				placement="bottom"
+				container="body"
+			>
+				<span class="fa fa-times"></span>
+			</a>
+		</span>
 	</h3>
 </div>
 
