--- a/src/app/core/feedback/feedback-modal/feedback-modal.component.html
+++ b/src/app/core/feedback/feedback-modal/feedback-modal.component.html
@@ -2,11 +2,14 @@
 	<h2 class="modal-title">
 		Give Feedback
 	</h2>
-	<button type="button" class="close"
-			(click)="modalRef.hide()"
-			tooltip="Close"
-			placement="bottom"
-			aria-label="Close">
+	<button
+		type="button"
+		class="close"
+		(click)="modalRef.hide()"
+		tooltip="Close"
+		placement="bottom"
+		aria-label="Close"
+	>
 		<span class="fa fa-times" aria-hidden="true"></span>
 	</button>
 </section>
@@ -16,11 +19,18 @@
 		<h2 class="pb-2">What's on your mind?</h2>
 
 		<div class="form-check pl-0">
-			<input class="form-check-input" type="radio" name="type-option-radio" id="type-option-1"
-				   value="General Feedback"
-				   [(ngModel)]="feedback.type"
-				   required>
-			<label for="type-option-1" class="form-check-label mb-2">Ask a question or make a comment</label>
+			<input
+				class="form-check-input"
+				type="radio"
+				name="type-option-radio"
+				id="type-option-1"
+				value="General Feedback"
+				[(ngModel)]="feedback.type"
+				required
+			/>
+			<label for="type-option-1" class="form-check-label mb-2"
+				>Ask a question or make a comment</label
+			>
 		</div>
 
 		<ng-container *ngIf="feedback.type === 'General Feedback'">
@@ -28,10 +38,15 @@
 		</ng-container>
 
 		<div class="form-check pl-0">
-			<input type="form-check-input" type="radio" name="type-option-radio" id="type-option-2"
-				   value="Feature Request"
-				   [(ngModel)]="feedback.type"
-				   required>
+			<input
+				type="form-check-input"
+				type="radio"
+				name="type-option-radio"
+				id="type-option-2"
+				value="Feature Request"
+				[(ngModel)]="feedback.type"
+				required
+			/>
 			<label for="type-option-2" class="form-check-label mb-2">Suggest a new feature</label>
 		</div>
 
@@ -40,10 +55,15 @@
 		</ng-container>
 
 		<div class="form-check pl-0">
-			<input type="form-check-input" type="radio" name="type-option-radio" id="type-option-3"
-				   value="Bug Report"
-				   [(ngModel)]="feedback.type"
-				   required>
+			<input
+				type="form-check-input"
+				type="radio"
+				name="type-option-radio"
+				id="type-option-3"
+				value="Bug Report"
+				[(ngModel)]="feedback.type"
+				required
+			/>
 			<label for="type-option-3" class="form-check-label mb-2">Report a bug/error</label>
 		</div>
 
@@ -51,59 +71,94 @@
 			<h3 class="pt-3 pb-2">What's the bug/error type?</h3>
 
 			<div class="form-check pl-0">
-				<input class="form-check-input" type="radio" name="subtype-option-radio" id="subtype-option-1"
-					   value="Content or data"
-					   [(ngModel)]="feedback.subType"
-					   required>
+				<input
+					class="form-check-input"
+					type="radio"
+					name="subtype-option-radio"
+					id="subtype-option-1"
+					value="Content or data"
+					[(ngModel)]="feedback.subType"
+					required
+				/>
 				<label for="subtype-option-1" class="form-check-label mb-2">Content or data</label>
 			</div>
 
 			<div class="form-check pl-0">
-				<input class="form-check-input" type="radio" name="subtype-option-radio" id="subtype-option-2"
-					   value="Styling"
-					   [(ngModel)]="feedback.subType"
-					   required>
+				<input
+					class="form-check-input"
+					type="radio"
+					name="subtype-option-radio"
+					id="subtype-option-2"
+					value="Styling"
+					[(ngModel)]="feedback.subType"
+					required
+				/>
 				<label for="subtype-option-2" class="form-check-label mb-2">Styling</label>
 			</div>
 
 			<div class="form-check pl-0">
-				<input class="form-check-input" type="radio" name="subtype-option-radio" id="subtype-option-3"
-					   value="Technical"
-					   [(ngModel)]="feedback.subType"
-					   required>
+				<input
+					class="form-check-input"
+					type="radio"
+					name="subtype-option-radio"
+					id="subtype-option-3"
+					value="Technical"
+					[(ngModel)]="feedback.subType"
+					required
+				/>
 				<label for="subtype-option-3" class="form-check-label mb-2">Technical</label>
 			</div>
 
 			<div class="form-check pl-0">
-				<input class="form-check-input" type="radio" name="subtype-option-radio" id="subtype-option-4"
-					   value="Other"
-					   [(ngModel)]="feedback.subType"
-					   required>
+				<input
+					class="form-check-input"
+					type="radio"
+					name="subtype-option-radio"
+					id="subtype-option-4"
+					value="Other"
+					[(ngModel)]="feedback.subType"
+					required
+				/>
 				<label for="subtype-option-4" class="form-check-label mb-2">Other</label>
 			</div>
 			<div class="mb-2" *ngIf="feedback.subType === 'Other'">
-				<input class="form-control" name="other-description"
-					   [(ngModel)]="feedback.otherText" required/>
+				<input
+					class="form-control"
+					name="other-description"
+					[(ngModel)]="feedback.otherText"
+					required
+				/>
 			</div>
 
 			<div class="form-check pl-0">
-				<input class="form-check-input" type="radio" name="subtype-option-radio" id="subtype-option-5"
-					   value="Unsure"
-					   [(ngModel)]="feedback.subType"
-					   required>
+				<input
+					class="form-check-input"
+					type="radio"
+					name="subtype-option-radio"
+					id="subtype-option-5"
+					value="Unsure"
+					[(ngModel)]="feedback.subType"
+					required
+				/>
 				<label for="subtype-option-5" class="form-check-label mb-2">Unsure</label>
 			</div>
 
 			<h3 class="pt-2">What happened?</h3>
 			<ng-container *ngTemplateOutlet="textInput"></ng-container>
-
 		</ng-container>
 
 		<ng-template #textInput>
 			<div *ngIf="classificationOptions" class="form-group pt-2">
-				<ng-select [items]="classificationOptions" [clearable]="false" bindLabel="level"
-						   [(ngModel)]="feedback.classification" name="classification" required
-						   placeholder="Select Classification" dropdownPosition="bottom">
+				<ng-select
+					[items]="classificationOptions"
+					[clearable]="false"
+					bindLabel="level"
+					[(ngModel)]="feedback.classification"
+					name="classification"
+					required
+					placeholder="Select Classification"
+					dropdownPosition="bottom"
+				>
 				</ng-select>
 			</div>
 
@@ -114,7 +169,8 @@
 					style="height: 8rem;"
 					[(ngModel)]="feedback.text"
 					required
-					placeholder="Enter Feedback">
+					placeholder="Enter Feedback"
+				>
 				</textarea>
 			</div>
 		</ng-template>
@@ -129,5 +185,12 @@
 		{{ success }}
 	</div>
 	<button type="button" class="btn btn-link mr-2" (click)="modalRef.hide()">Cancel</button>
-	<button type="button" class="btn btn-primary" [disabled]="submitting || !submitFeedbackForm.form.valid" (click)="submit()">Submit</button>
+	<button
+		type="button"
+		class="btn btn-primary"
+		[disabled]="submitting || !submitFeedbackForm.form.valid"
+		(click)="submit()"
+	>
+		Submit
+	</button>
 </section>
