--- a/src/app/core/signin/signin.component.html
+++ b/src/app/core/signin/signin.component.html
@@ -1,21 +1,16 @@
 <section class="container">
-
 	<section class="row" *ngIf="loaded">
-
 		<!-- PKI Authentication Strategy -->
 		<div class="signin-loading-container mx-auto mt-5" *ngIf="pkiMode">
-			<loading-spinner [hidden]="error"
-				message="Signing In...">
-			</loading-spinner>
+			<loading-spinner [hidden]="error" message="Signing In..."> </loading-spinner>
 			<div [hidden]="!error" class="text-center text-danger">
 				<p>Unable to authenticate:</p>
-				<strong>{{error}}</strong>
+				<strong>{{ error }}</strong>
 			</div>
 		</div>
 
 		<!-- Username/Password Authentication Strategy -->
 		<div class="signin-container mx-auto mt-5" *ngIf="!pkiMode">
-
 			<h2 class="text-center">Sign In</h2>
 
 			<div class="signin-form" autocomplete="off">
@@ -23,25 +18,42 @@
 					<legend></legend>
 					<div class="form-group">
 						<label for="username">Username</label>
-						<input autofocus type="text" id="username" name="username" class="form-control" [(ngModel)]="username" (keyup.enter)="signin()" placeholder="Username">
+						<input
+							autofocus
+							type="text"
+							id="username"
+							name="username"
+							class="form-control"
+							[(ngModel)]="username"
+							(keyup.enter)="signin()"
+							placeholder="Username"
+						/>
 					</div>
 					<div class="form-group">
 						<label for="password">Password</label>
-						<input type="password" id="password" name="password" class="form-control" [(ngModel)]="password" (keyup.enter)="signin()" placeholder="Password">
+						<input
+							type="password"
+							id="password"
+							name="password"
+							class="form-control"
+							[(ngModel)]="password"
+							(keyup.enter)="signin()"
+							placeholder="Password"
+						/>
 					</div>
 					<div class="form-group text-center">
-						<button type="submit" class="btn btn-primary mr-2" (click)="signin()">Sign In</button>
-						<button type="button" class="btn btn-link" routerLink="/signup">or Sign Up</button>
+						<button type="submit" class="btn btn-primary mr-2" (click)="signin()">
+							Sign In
+						</button>
+						<button type="button" class="btn btn-link" routerLink="/signup">
+							or Sign Up
+						</button>
 					</div>
 					<div [hidden]="!error" class="text-center text-danger">
-						<strong>{{error}}</strong>
+						<strong>{{ error }}</strong>
 					</div>
 				</fieldset>
 			</div>
-
 		</div>
-
 	</section>
-
-
 </section>
