--- a/src/app/core/teams/list-teams/list-teams.component.html
+++ b/src/app/core/teams/list-teams/list-teams.component.html
@@ -7,30 +7,50 @@
 
 		<!-- Alert Notifications -->
 		<system-alert></system-alert>
-
 	</ng-container>
 
 	<div [class.pt-2]="!embedded">
-
 		<div class="d-flex mb-3 align-items-center">
-			<asy-search-input placeholder="Search teams..." (applySearch)="searchEvent$.next($event)"></asy-search-input>
-			<button [routerLink]="['/team/create']" [queryParams]="{ parent: parent?._id }"
-					type="button" class="btn btn-primary ml-auto" *ngIf="canCreateTeam">
+			<asy-search-input
+				placeholder="Search teams..."
+				(applySearch)="searchEvent$.next($event)"
+			></asy-search-input>
+			<button
+				[routerLink]="['/team/create']"
+				[queryParams]="{ parent: parent?._id }"
+				type="button"
+				class="btn btn-primary ml-auto"
+				*ngIf="canCreateTeam"
+			>
 				<span class="fa fa-plus"></span> Create Team
 			</button>
 		</div>
 
-		<pageable-table [items]="items" [hasItems]="hasItems" [pagingOptions]="pagingOptions" [tableStriped]="true" [loading]="loading" (pageChange)="pageEvent$.next($event)">
+		<pageable-table
+			[items]="items"
+			[hasItems]="hasItems"
+			[pagingOptions]="pagingOptions"
+			[tableStriped]="true"
+			[loading]="loading"
+			(pageChange)="pageEvent$.next($event)"
+		>
 			<ng-template #tableHeader>
 				<th scope="col" *ngFor="let header of headers">
-					<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
+					<sortable-table-header
+						[header]="header"
+						[currentSortField]="pagingOptions.sortField"
+						[currentSortDir]="pagingOptions.sortDir"
+						(sortChange)="sortEvent$.next($event)"
+					></sortable-table-header>
 				</th>
 			</ng-template>
 
 			<ng-template #tableRow let-team="item" let-i="index">
 				<td>
 					<div>
-						<a class="text-decoration-underline" [routerLink]="['/team', team._id]">{{ team.name }}</a>
+						<a class="text-decoration-underline" [routerLink]="['/team', team._id]">{{
+							team.name
+						}}</a>
 					</div>
 				</td>
 				<td>
