--- a/src/app/core/teams/team-select-input/team-select-input.component.html
+++ b/src/app/core/teams/team-select-input/team-select-input.component.html
@@ -2,5 +2,6 @@
 	[items]="options$ | async"
 	[(ngModel)]="value"
 	[placeholder]="placeholder"
-	bindLabel="name">
+	bindLabel="name"
+>
 </ng-select>
